--- a/app/src/main/res/layout/activity_camera_capture.xml
+++ b/app/src/main/res/layout/activity_camera_capture.xml
@@ -8,12 +8,23 @@
         android:layout_height="match_parent" />
 
     <ImageView
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_alignParentBottom="true"
+    android:padding="10dp"
+    android:src="@drawable/img_capture"
+    android:id="@+id/btn_capture"
+    android:layout_width="75dp"
+    android:layout_height="75dp" />
+
+    <ImageView
+        android:visibility="gone"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:padding="10dp"
-        android:src="@drawable/img_capture"
-        android:id="@+id/btn_capture"
+        android:src="@drawable/img_capture_switch"
+        android:id="@+id/btn_switch"
         android:layout_width="75dp"
         android:layout_height="75dp" />
+
 
 </RelativeLayout>
