--- a/app/src/main/res/layout-sw600dp/activity_dataoutlet_olx.xml
+++ b/app/src/main/res/layout-sw600dp/activity_dataoutlet_olx.xml
@@ -111,6 +111,8 @@
             <Spinner
                 android:padding="5dp"
                 android:id="@+id/spinner_jenis_outlet"
+                android:prompt="@array/jenis_outlet"
+                android:entries="@array/jenis_outlet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                  />
